--- a/index.html
+++ b/index.html
@@ -2,25 +2,100 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>AppMore</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<!-- Template en Blanco -->
-<div class="container">
-	<div class="row">
-		<div class="col-md-12">
-			<div class="inicial">
-				<h1>Started listo para iniciar a trabajar</h1>
-				<p>Configuración Started con gulp incluido, bootstrap y normalize para iniciar a trabajar.</p>
-				<a href="mailto:mager19@gmail.com">mager19@gmail.com</a>
+<!-- Header -->
+<header class="header espaciado">
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque quos quaerat totam delectus debitis, similique tempora distinctio nisi. Iste quisquam ex error debitis magnam repellendus dolor officia voluptatibus expedita voluptates!
 			</div>
 		</div>
 	</div>
-</div>
+</header>
+<!-- /Header -->
+
+<!-- About -->
+<section class="about espaciado">
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12 col-md-6">
+				<h3>AppMore</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis vitae natus eum necessitatibus accusamus atque quas, esse! Recusandae fugit rerum sed quibusdam, iusto doloremque ab vitae aut, quasi quaerat officia.</p>
+			</div>
+			<div class="col-xs-12 col-md-6">
+				<img src="https://imgholder.ru/600x300/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt="">
+			</div>
+		</div>
+	</div>
+</section>
+<!-- /About -->
+
+<!-- Features -->
+<section class="features espaciado">
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12 col-md-12">
+				<h2>Features</h2>
+			</div>
+		</div>
+	</div>
+</section>
+<!-- /Features -->
+
+<!-- Pricing -->
+<section class="pricing espaciado">
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12 col-md-12">
+				<h2>Pricing </h2>
+			</div>
+		</div>
+	</div>
+</section>
+<!-- /Pricing -->
+
+<!-- Team -->
+<section class="team espaciado">
+	<div class="container">
+		<div class="row">
+			<div class=" col-xs-12 col-md-12">
+				<h2>Team</h2>
+			</div>
+		</div>
+	</div>
+</section>
+<!-- /Team -->
+
+<!-- Cta -->
+<section class="cta espaciado">
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12 col-md-12">
+				<h2>CTA</h2>
+			</div>
+		</div>
+	</div>
+</section>
+<!-- /Cta -->
+
+<!-- Footer -->
+<footer class="footer espaciado">
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12 col-md-12">
+				footer
+			</div>
+		</div>
+	</div>
+</footer>
+<!-- /Footer -->
 
 <script src="js/bootstrap.js"></script>
 </body>
