Inicio e inserción de la información sin estilos.

--- a/index.html
+++ b/index.html
@@ -10,12 +10,51 @@
 <body>
 
 <!-- Header -->
-<header class="header espaciado">
+<header class="header">
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-12">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque quos quaerat totam delectus debitis, similique tempora distinctio nisi. Iste quisquam ex error debitis magnam repellendus dolor officia voluptatibus expedita voluptates!
+			<div class="col-xs-2">
+				<div class="logo">
+					<img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt="">
+				</div>
 			</div>
+			<!-- Nav -->
+			<div class="col-xs-12">
+				<nav class="navbar navbar-default">
+  					<div class="container-fluid">
+		    			<!-- Brand and toggle get grouped for better mobile display -->
+					    <div class="navbar-header">
+					      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+					        <span class="sr-only">Toggle navigation</span>
+					        <span class="icon-bar"></span>
+					        <span class="icon-bar"></span>
+					        <span class="icon-bar"></span>
+					      </button>					      
+					    </div>				
+
+				    <!-- Collect the nav links, forms, and other content for toggling -->
+				    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				      <ul class="nav navbar-nav">
+				        <li class="active"><a href="#">Features <span class="sr-only">(current)</span></a></li>
+				        <li><a href="#">Pricing</a></li>
+				        <li><a href="#">Team</a></li>
+				        <li><a href="#">Support</a></li>
+				        <li><a href="#">Download<a></li>			        
+				      </ul>				      
+				    </div><!-- /.navbar-collapse -->
+				  </div><!-- /.container-fluid -->
+				</nav>
+			</div>
+			<!-- /Nav -->
+			<!-- Presentation -->
+			<div class="col-xs-12">
+				<div class="presentation">
+					<h1><span>AppMore</span>, the app that everyone is using</h1>
+					<p>The ideal features to meet the need you have, with a clean and simple interface, you can enjoy many features with the free version or pay the premium version</p>
+					<a href="#" class="my__button">Learn More</a>
+				</div>
+			</div>
+			<!-- /Presentation -->
 		</div>
 	</div>
 </header>
@@ -27,11 +66,16 @@
 		<div class="row">
 			<div class="col-xs-12 col-md-6">
 				<h3>AppMore</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis vitae natus eum necessitatibus accusamus atque quas, esse! Recusandae fugit rerum sed quibusdam, iusto doloremque ab vitae aut, quasi quaerat officia.</p>
+				<blockquote>
+					The solution you were looking for to reach your customers, communicate with them, provide them with an effective means of contact and analyze their responses.
+				</blockquote>
+				<p>The ideal features to meet the need you have, with a clean and simple interface, you can enjoy many features with the free version or pay the premium version</p>	
+				<p>Measuring customer satisfaction will allow you to have an overall view of what is being done and the results you are getting, so you can be sure to continue with that strategy or change course</p>	
+				<a href="#" class="my__button">Get Started</a>		
 			</div>
 			<div class="col-xs-12 col-md-6">
 				<img src="https://imgholder.ru/600x300/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt="">
-			</div>
+			</div>			
 		</div>
 	</div>
 </section>
@@ -42,7 +86,16 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-md-12">
-				<h2>Features</h2>
+				<h2 class="title__section">Features</h2>
+				<p>The ideal features to meet the need you have, with a clean and simple interface, you can enjoy many features with the free version or pay the premium version</p>
+				<div class="features__slide">
+					<div class="col-xs-6">
+						<img src="https://imgholder.ru/600x300/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt="">
+					</div>
+					<div class="col-xs-6">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, error dolorem cupiditate quam velit itaque debitis rerum eveniet labore, facere tenetur deserunt sed quos perferendis optio nihil odit non quisquam.
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -97,6 +150,10 @@
 </footer>
 <!-- /Footer -->
 
+<script
+  src="http://code.jquery.com/jquery-3.2.1.js"
+  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+  crossorigin="anonymous"></script>
 <script src="js/bootstrap.js"></script>
 </body>
 </html>
