--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <header class="header">
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-2">
+			<div class="col-xs-4 col-md-2">
 				<div class="logo">
-					<img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt="">
+					<img src="img/logo.png" alt="logotipo">
 				</div>
 			</div>
 			<!-- Nav -->
-			<div class="col-xs-12">
-				<nav class="navbar navbar-default">
+			<div class="col-xs-12 col-md-10 col-md-offset-2">
+				<nav class="navbar ">
   					<div class="container-fluid">
 		    			<!-- Brand and toggle get grouped for better mobile display -->
 					    <div class="navbar-header">
@@ -39,7 +39,7 @@
 				        <li><a href="#">Pricing</a></li>
 				        <li><a href="#">Team</a></li>
 				        <li><a href="#">Support</a></li>
-				        <li><a href="#">Download<a></li>			        
+				        <li><a href="#">Download</a></li>			        
 				      </ul>				      
 				    </div><!-- /.navbar-collapse -->
 				  </div><!-- /.container-fluid -->
@@ -47,7 +47,7 @@
 			</div>
 			<!-- /Nav -->
 			<!-- Presentation -->
-			<div class="col-xs-12">
+			<div class="col-xs-12 col-md-10 col-md-offset-1">
 				<div class="presentation">
 					<h1><span>AppMore</span>, the app that everyone is using</h1>
 					<p>The ideal features to meet the need you have, with a clean and simple interface, you can enjoy many features with the free version or pay the premium version</p>
@@ -107,7 +107,36 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-md-12">
-				<h2>Pricing </h2>
+				<h2 class="title__section">Pricing</h2>
+				<p>The ideal features to meet the need you have, with a clean and simple interface, you can enjoy many features with the free version or pay the premium version</p>
+			</div>
+			<div class="col-xs-12 col-md-6">
+				<div class="princing--left">
+					<div class="row">
+						<div class="col-md-12">
+							<p><b>Free:</b> our free mode allows you access to the basic functions, so you have a real experience of our app. Behaviors may be limited by the characteristics of the plan</p>
+						</div>
+						<div class="col-md-12">
+							<p>Premium: Es la manera ideal de usar nuestra aplicación teniendo acceso a los diferentes modulos que completan la experiencia de uso, es la manera recomendada de usar nuestra aplicación sin importar la plataforma</p>
+						</div>
+					</div>					
+				</div>
+			</div>
+			<div class="col-xs-12 col-md-6">
+				<div class="pricing--right">
+					<div class="col-xs-10 col-xs-offset-1 col-md-5">
+						<div class="pricing__table">
+							<h2>Free</h2>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero a odit provident recusandae. Necessitatibus dolor officia, incidunt et sapiente, reprehenderit fugiat vitae voluptate, porro quidem eaque quasi ad eum mollitia.</p>
+						</div>
+					</div>
+					<div class="col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-1">
+						<div class="pricing__table">
+							<h2>Free</h2>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero a odit provident recusandae. Necessitatibus dolor officia, incidunt et sapiente, reprehenderit fugiat vitae voluptate, porro quidem eaque quasi ad eum mollitia.</p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -118,8 +147,64 @@
 <section class="team espaciado">
 	<div class="container">
 		<div class="row">
-			<div class=" col-xs-12 col-md-12">
-				<h2>Team</h2>
+			<div class="col-xs-12 col-md-12">
+				<h2 class="title__section">Team</h2>
+				<p>The ideal features to meet the need you have, with a clean and simple interface, you can enjoy many features with the free version or pay the premium version</p>
+			</div>
+			<div class="col-xs-12 col-md-6">
+				<div class="team--left">
+					<div class="row">
+						<div class="col-xs-6 col-md-6">
+							<div class="team__member">
+								<img src="https://imgholder.ru/600x300/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt="">
+							</div>							
+						</div>	
+						<div class="col-xs-6 col-md-6">
+							<div class="team__member">
+								<img src="https://imgholder.ru/600x300/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt="">
+							</div>							
+						</div>	
+						<div class="col-xs-6 col-md-6">
+							<div class="team__member">
+								<img src="https://imgholder.ru/600x300/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt="">
+							</div>							
+						</div>	
+						<div class="col-xs-6 col-md-6">
+							<div class="team__member">
+								<img src="https://imgholder.ru/600x300/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt="">
+							</div>							
+						</div>	
+						<div class="col-xs-6 col-md-6">
+							<div class="team__member">
+								<img src="https://imgholder.ru/600x300/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt="">
+							</div>							
+						</div>	
+						<div class="col-xs-6 col-md-6">
+							<div class="team__member">
+								<img src="https://imgholder.ru/600x300/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt="">
+							</div>							
+						</div>						
+					</div>
+				</div>
+			</div>
+			<div class="hidden-xs col-md-6">
+				<div class="team__member--active">
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3">
+							<img src="https://imgholder.ru/600x600/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt="">
+						</div>
+						<div class="col-md-12">
+							<h3>Jose Mendez</h3>
+							<a href="#">Josem@gmail.com</a>
+							<p>With experience of 4 years in web layout, user experience and image processing for web. With a focus on design is the ideal element to work with us.</p>
+							<ul>
+								<li><a href="#"><img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt=""></a></li>
+								<li><a href="#"><img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt=""></a></li>
+								<li><a href="#"><img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt=""></a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -131,7 +216,11 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-md-12">
-				<h2>CTA</h2>
+				<div class=" col-xs-12 col-md-12">
+					<h2>Let's work together!</h2>
+					<p>Download the app and create a account</p>
+					<a href="#" class="my__button">Download</a>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -139,11 +228,11 @@
 <!-- /Cta -->
 
 <!-- Footer -->
-<footer class="footer espaciado">
+<footer class="footer">
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-md-12">
-				footer
+				<h4>AppMore - 2017</h4>
 			</div>
 		</div>
 	</div>
