--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>AppMore</title>
-	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/slick/slick.css">
+	<link rel="stylesheet" href="css/slick/slick-theme.css">
 </head>
 <body>
 
@@ -101,19 +103,110 @@
 <!-- /About -->
 
 <!-- Features -->
-<section class="features espaciado">
+<section class="features espaciado boxy">
+
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-md-12">
 				<h2 class="title__section">Features</h2>
-				<p>The ideal features to meet the need you have, with a clean and simple interface, you can enjoy many features with the free version or pay the premium version</p>
-				<div class="features__slide">
-					<div class="col-xs-6">
-						<img src="https://imgholder.ru/600x300/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt="">
+				<p class="subtitle__section">The ideal features to meet the need you have, with a clean and simple interface, you can enjoy many features with the free version or pay the premium version</p>
+				<div class="slide">
+					<!-- Dots navigation -->
+					<div class="dots__navigation">
+						<div class="row">
+							<div class="col-md-3 col-xs-3">
+								<a href="#" data-slide="1">1</a>
+							</div>
+							<div class="col-md-3 col-xs-3">
+								<a href="#" data-slide="2">2</a>
+							</div>
+							<div class="col-md-3 col-xs-3">
+								<a href="#" data-slide="3">3</a>
+							</div>
+							<div class="col-md-3 col-xs-3">
+								<a href="#" data-slide="4">4</a>
+							</div>
+						</div>
 					</div>
-					<div class="col-xs-6">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, error dolorem cupiditate quam velit itaque debitis rerum eveniet labore, facere tenetur deserunt sed quos perferendis optio nihil odit non quisquam.
-					</div>
+					<div class="features__slide">
+						<!-- Slide Item -->
+						<div class="features__slide__item">
+					  		<div class="col-md-5">
+					  			<figure>
+					  				<img src="img/iphone1.png" alt="iphone">
+					  			</figure>
+					  		</div>
+					  		<div class="col-md-7">
+					  			<h2>Clean & Modern Design</h2>
+					  			<p>Maybe someday, when Gotham no longer needs Batman I'll see him again. As Gotham's favored son you will be ideally
+					  			placed to strike at the heart of criminality. If you're good at something, never do it for free.							
+								What if, before she died, she wrote a letter saying she chose Harvey Dent over you? And what if, to spare you pain, I burnt that letter? 
+								Tomorrow, you will be released. </p>
+								<p>If you are bored of brawling with thieves and want to achieve something there is a rare blue flower that grows on the eastern slopes. Pick one of these flowers. If you can carry it to the top of the mountain, you may find what you were looking for in the first place. </p>
+								<ul>
+									<li>That's a lovely lovely voice!</li>
+									<li>You see, I'm a guy of simple taste. I enjoy dynamite and gunpowder and gasoline.</li>
+									<li>You have learn to bury your guilt with anger. I will teach you to confront it and to face the truth</li>
+									<li>And as for the television's so-called plan, Batman has no jurisdiction.</li>
+								</ul>
+					  			<a href="#" class="my__button">Get Started</a>	
+					  		</div>	
+					  	</div>
+					  	<!-- Slide Item -->
+						<div class="features__slide__item">
+					  		<div class="col-md-5">
+					  			<figure>
+					  				<img src="img/iphone2.png" alt="iphone">
+					  			</figure>
+					  		</div>
+					  		<div class="col-md-7">
+					  			<h2>Easily Customize</h2>
+						  		<p>But I know the rage that drives you. That impossible anger strangIing the grief until the memory of your loved one is just poison in your veins. And one day, you catch yourself wishing the person you loved had never existed so you'd be spared your pain.</p>
+						  		<p>Maybe someday, when Gotham no longer needs Batman I'll see him again. As Gotham's favored son you will be ideally placed to strike at the heart of criminality. If you're good at something, never do it for free. </p>
+						  		<blockquote>
+						  			What if, before she died, she wrote a letter saying she chose Harvey Dent over you? And what if, to spare you pain, I burnt that letter?
+						  		</blockquote>
+						  		<p>Death does not wait for you to be ready! Death is not considerate of fair! And make no mistake, here you face death. Tiger. Jujitsu. Panther. You're skilled. But this is not a dance. And you are afraid. But not of me. Tell us Mr. Wayne, what do you fear? Breathe in your fears. Face them. To conquer fear, you must become fear. You must bask in the fear of other men. And men fear most what they cannot see. You have to become a terrible thought. A wraith. You have to become an idea! To control. And know that this power can be yours. Embrace your worst fear. Become one with the darkness. I'm Batman</p>
+						  		<a href="#" class="my__button">Get Started</a>	
+					  		</div>
+					  	</div>
+					  	<!-- Slide Item -->
+					  	<div class="features__slide__item">
+					  		<div class="col-md-5">
+					  			<figure>
+					  				<img src="img/iphone3.png" alt="iphone">
+					  			</figure>
+					  		</div>
+					  		<div class="col-md-7">
+					  			<h2>Fully Responsive</h2>
+					  			<p>Maybe someday, when Gotham no longer needs Batman I'll see him again. Tomorrow, you will be released. If you are bored of brawling with thieves and want to achieve something there is a rare blue flower that grows on the eastern slopes. Pick one of these flowers. If you can carry it to the top of the mountain, you may find what you were looking for in the first place.</p>
+					  			<p>You have inspired good. But you spat in the faces of Gotham's criminals. Didn't you think there might be casualties? Things always get worse before they get better. Hero can be anyone. Even a man knowing something as simple and reassuring as putting a coat around a young boy shoulders to let him know the world hadn't ended.</p>
+					  			<p>We have purged your fear. You are ready to Iead these men. You are ready to become a member of the League of Shadows. But first, you must demonstrate your commitment to justice. I'm Gotham's reckoning. It'll end the ball of damns you've all been living on. A necessary evil. Okay. Now... Hardened Kevlar plates over titanium-dipped, tri-weave fibers for flexibility. You'll be lighter, faster, more agile. Never underestimate Gotham City. People get mugged coming home from work every day of the week. Sometimes things just go bad.</p>
+					  			<p>No guns, no killing. You know what you said about the structures becoming shackles. You were right and I can't take it, the injustice. I mean, no one ever's gonna know who saved the entire city.</p>
+
+					  		</div>					  		
+					  	</div>
+					  	<!-- Slide Item -->
+					  	<div class="features__slide__item">
+					  		<div class="col-md-7">
+					  			<h2>Powerful Options</h2>
+					  			<p>You wanna know how I got these scars? My father was... a drinker, and a fiend. And one night, he goes off crazier than usual. Mommy gets the kitchen knife to defend herself. He doesn't like that, not one bit. So, me watching he takes the knife to her, laughing while he does it. He turns to me and he says: "Why so serious?". He comes at me with the knife "Why so serious?". He sticks the blade in my mouth. "Let's put a smile on that face." and... Why so serious?</p>
+								<blockquote>I'll be standing where l belong. Between you and the peopIe of Gotham. The city needs Bruce Wayne, your resources, your knowledge. It doesn't need your body or your life. That time is past.</blockquote>
+								<ul>
+									<li>That's a lovely lovely voice!</li>
+									<li>You see, I'm a guy of simple taste. I enjoy dynamite and gunpowder and gasoline.</li>
+									<li>You have learn to bury your guilt with anger. I will teach you to confront it and to face the truth</li>
+									<li>And as for the television's so-called plan, Batman has no jurisdiction.</li>
+								</ul>
+					  			<a href="#" class="my__button">Get Started</a>	
+					  		</div>
+					  		<div class="col-md-5">
+					  			<figure>
+					  				<img src="img/iphone4.png" alt="iphone">
+					  			</figure>
+					  		</div>
+					  	</div>
+					</div>		
 				</div>
 			</div>
 		</div>
@@ -122,7 +215,7 @@
 <!-- /Features -->
 
 <!-- Pricing -->
-<section class="pricing espaciado">
+<section class="pricing espaciado boxy--left">
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-md-12">
@@ -258,16 +351,21 @@
 </footer>
 <!-- /Footer -->
 
+<!-- ======================= Scripts  =========================== -->
 <script
   src="http://code.jquery.com/jquery-3.2.1.js"
   integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
   crossorigin="anonymous"></script>
+<!-- ======================= Bootstrap  =========================== -->
 <script src="js/bootstrap.js"></script>
+<!-- ======================= JQuery  =========================== -->
+<!--Slick-->
+<script src="js/slick/slick.min.js"></script> 
+<script src="js/main.js"></script>
+
 
 <script>
-$( document ).ready(function() {
-   $('.video').click(function(){this.paused?this.play():this.pause();});
-});
+
 
 	
 </script>
