--- a/index.html
+++ b/index.html
@@ -128,85 +128,87 @@
 							</div>
 						</div>
 					</div>
+					<!-- Slide Item -->
 					<div class="features__slide">
-						<!-- Slide Item -->
 						<div class="features__slide__item">
-					  		<div class="col-md-5">
+							<div class="col-md-5 col-md-offset-0 col-xs-8 col-xs-offset-2">
 					  			<figure>
 					  				<img src="img/iphone1.png" alt="iphone">
 					  			</figure>
 					  		</div>
-					  		<div class="col-md-7">
-					  			<h2>Clean & Modern Design</h2>
-					  			<p>Maybe someday, when Gotham no longer needs Batman I'll see him again. As Gotham's favored son you will be ideally
-					  			placed to strike at the heart of criminality. If you're good at something, never do it for free.							
-								What if, before she died, she wrote a letter saying she chose Harvey Dent over you? And what if, to spare you pain, I burnt that letter? 
-								Tomorrow, you will be released. </p>
-								<p>If you are bored of brawling with thieves and want to achieve something there is a rare blue flower that grows on the eastern slopes. Pick one of these flowers. If you can carry it to the top of the mountain, you may find what you were looking for in the first place. </p>
-								<ul>
-									<li>That's a lovely lovely voice!</li>
-									<li>You see, I'm a guy of simple taste. I enjoy dynamite and gunpowder and gasoline.</li>
-									<li>You have learn to bury your guilt with anger. I will teach you to confront it and to face the truth</li>
-									<li>And as for the television's so-called plan, Batman has no jurisdiction.</li>
-								</ul>
-					  			<a href="#" class="my__button">Get Started</a>	
+					  		<div class="col-md-7 col-xs-12">					  			
+					  				<h2>Clean & Modern Design</h2>
+						  			<p>Maybe someday, when Gotham no longer needs Batman I'll see him again. As Gotham's favored son you will be ideally
+						  			placed to strike at the heart of criminality. If you're good at something, never do it for free.							
+									What if, before she died, she wrote a letter saying she chose Harvey Dent over you? And what if, to spare you pain, I burnt that letter? 
+									Tomorrow, you will be released. </p>
+									<p>If you are bored of brawling with thieves and want to achieve something there is a rare blue flower that grows on the eastern slopes. Pick one of these flowers. If you can carry it to the top of the mountain, you may find what you were looking for in the first place. </p>
+									<ul>
+										<li>That's a lovely lovely voice!</li>
+										<li>You see, I'm a guy of simple taste. I enjoy dynamite and gunpowder and gasoline.</li>
+										<li>You have learn to bury your guilt with anger. I will teach you to confront it and to face the truth</li>
+										<li>And as for the television's so-called plan, Batman has no jurisdiction.</li>
+									</ul>
+						  			<a href="#" class="my__button">Get Started</a>					  			
 					  		</div>	
-					  	</div>
-					  	<!-- Slide Item -->
+						</div>
+						<!-- Slide Item -->
 						<div class="features__slide__item">
-					  		<div class="col-md-5">
+							<div class="col-md-5 col-md-offset-0 col-xs-8 col-xs-offset-2">
 					  			<figure>
 					  				<img src="img/iphone2.png" alt="iphone">
 					  			</figure>
 					  		</div>
-					  		<div class="col-md-7">
+					  		<div class="col-md-7 col-xs-12">					  			
 					  			<h2>Easily Customize</h2>
-						  		<p>But I know the rage that drives you. That impossible anger strangIing the grief until the memory of your loved one is just poison in your veins. And one day, you catch yourself wishing the person you loved had never existed so you'd be spared your pain.</p>
-						  		<p>Maybe someday, when Gotham no longer needs Batman I'll see him again. As Gotham's favored son you will be ideally placed to strike at the heart of criminality. If you're good at something, never do it for free. </p>
-						  		<blockquote>
-						  			What if, before she died, she wrote a letter saying she chose Harvey Dent over you? And what if, to spare you pain, I burnt that letter?
-						  		</blockquote>
-						  		<p>Death does not wait for you to be ready! Death is not considerate of fair! And make no mistake, here you face death. Tiger. Jujitsu. Panther. You're skilled. But this is not a dance. And you are afraid. But not of me. Tell us Mr. Wayne, what do you fear? Breathe in your fears. Face them. To conquer fear, you must become fear. You must bask in the fear of other men. And men fear most what they cannot see. You have to become a terrible thought. A wraith. You have to become an idea! To control. And know that this power can be yours. Embrace your worst fear. Become one with the darkness. I'm Batman</p>
-						  		<a href="#" class="my__button">Get Started</a>	
-					  		</div>
-					  	</div>
-					  	<!-- Slide Item -->
+							  		<p>But I know the rage that drives you. That impossible anger strangIing the grief until the memory of your loved one is just poison in your veins. And one day, you catch yourself wishing the person you loved had never existed so you'd be spared your pain.</p>
+							  		<p>Maybe someday, when Gotham no longer needs Batman I'll see him again. As Gotham's favored son you will be ideally placed to strike at the heart of criminality. If you're good at something, never do it for free. </p>
+							  		<blockquote class="hidden-xs">
+							  			What if, before she died, she wrote a letter saying she chose Harvey Dent over you? And what if, to spare you pain, I burnt that letter?
+							  		</blockquote>
+							  		<p>Death does not wait for you to be ready! Death is not considerate of fair! And make no mistake, here you face death. Tiger. Jujitsu. Panther. You're skilled. But this is not a dance. And you are afraid. But not of me. Tell us Mr. Wayne, what do you fear? Breathe in your fears. Face them. To conquer fear, you must become fear. You must bask in the fear of other men. And men fear most what they cannot see. You have to become a terrible thought. A wraith. You have to become an idea! To control. And know that this power can be yours. Embrace your worst fear. Become one with the darkness. I'm Batman</p>
+							  		<a href="#" class="my__button">Get Started</a>			  			
+					  		</div>	
+						</div>
+						<!-- Slide Item -->
 					  	<div class="features__slide__item">
-					  		<div class="col-md-5">
+					  		<div class="col-md-5 col-md-offset-0 col-xs-8 col-xs-offset-2">
 					  			<figure>
 					  				<img src="img/iphone3.png" alt="iphone">
 					  			</figure>
 					  		</div>
-					  		<div class="col-md-7">
-					  			<h2>Fully Responsive</h2>
-					  			<p>Maybe someday, when Gotham no longer needs Batman I'll see him again. Tomorrow, you will be released. If you are bored of brawling with thieves and want to achieve something there is a rare blue flower that grows on the eastern slopes. Pick one of these flowers. If you can carry it to the top of the mountain, you may find what you were looking for in the first place.</p>
-					  			<p>You have inspired good. But you spat in the faces of Gotham's criminals. Didn't you think there might be casualties? Things always get worse before they get better. Hero can be anyone. Even a man knowing something as simple and reassuring as putting a coat around a young boy shoulders to let him know the world hadn't ended.</p>
-					  			<p>We have purged your fear. You are ready to Iead these men. You are ready to become a member of the League of Shadows. But first, you must demonstrate your commitment to justice. I'm Gotham's reckoning. It'll end the ball of damns you've all been living on. A necessary evil. Okay. Now... Hardened Kevlar plates over titanium-dipped, tri-weave fibers for flexibility. You'll be lighter, faster, more agile. Never underestimate Gotham City. People get mugged coming home from work every day of the week. Sometimes things just go bad.</p>
-					  			<p>No guns, no killing. You know what you said about the structures becoming shackles. You were right and I can't take it, the injustice. I mean, no one ever's gonna know who saved the entire city.</p>
-
+					  		<div class="col-md-7 col-xs-12">
+					  			<div class="features__slide__item--info">
+					  				<h2>Fully Responsive</h2>
+						  			<p>Maybe someday, when Gotham no longer needs Batman I'll see him again. Tomorrow, you will be released. If you are bored of brawling with thieves and want to achieve something there is a rare blue flower that grows on the eastern slopes. Pick one of these flowers. If you can carry it to the top of the mountain, you may find what you were looking for in the first place.</p>
+						  			<p class="hidden-xs">You have inspired good. But you spat in the faces of Gotham's criminals. Didn't you think there might be casualties? Things always get worse before they get better. Hero can be anyone. Even a man knowing something as simple and reassuring as putting a coat around a young boy shoulders to let him know the world hadn't ended.</p>
+						  			<p>We have purged your fear. You are ready to Iead these men. You are ready to become a member of the League of Shadows. But first, you must demonstrate your commitment to justice. I'm Gotham's reckoning. It'll end the ball of damns you've all been living on. A necessary evil. Okay. Now... Hardened Kevlar plates over titanium-dipped, tri-weave fibers for flexibility. You'll be lighter, faster, more agile. Never underestimate Gotham City. People get mugged coming home from work every day of the week. Sometimes things just go bad.</p>						  			
+					  			</div>
 					  		</div>					  		
 					  	</div>
 					  	<!-- Slide Item -->
 					  	<div class="features__slide__item">
-					  		<div class="col-md-7">
-					  			<h2>Powerful Options</h2>
-					  			<p>You wanna know how I got these scars? My father was... a drinker, and a fiend. And one night, he goes off crazier than usual. Mommy gets the kitchen knife to defend herself. He doesn't like that, not one bit. So, me watching he takes the knife to her, laughing while he does it. He turns to me and he says: "Why so serious?". He comes at me with the knife "Why so serious?". He sticks the blade in my mouth. "Let's put a smile on that face." and... Why so serious?</p>
-								<blockquote>I'll be standing where l belong. Between you and the peopIe of Gotham. The city needs Bruce Wayne, your resources, your knowledge. It doesn't need your body or your life. That time is past.</blockquote>
-								<ul>
-									<li>That's a lovely lovely voice!</li>
-									<li>You see, I'm a guy of simple taste. I enjoy dynamite and gunpowder and gasoline.</li>
-									<li>You have learn to bury your guilt with anger. I will teach you to confront it and to face the truth</li>
-									<li>And as for the television's so-called plan, Batman has no jurisdiction.</li>
-								</ul>
-					  			<a href="#" class="my__button">Get Started</a>	
-					  		</div>
-					  		<div class="col-md-5">
+					  		<div class="col-md-5 col-md-offset-0 col-xs-8 col-xs-offset-2">
 					  			<figure>
-					  				<img src="img/iphone4.png" alt="iphone">
+					  				<img src="img/iphone4.png" alt="phone">
 					  			</figure>
 					  		</div>
+					  		<div class="col-md-7 col-xs-12">
+					  			<div class="features__slide__item--info">
+					  				<h2>Powerful Options</h2>
+						  			<p>You wanna know how I got these scars? My father was... a drinker, and a fiend. And one night, he goes off crazier than usual. Mommy gets the kitchen knife to defend herself. He doesn't like that, not one bit. So, me watching he takes the knife to her, laughing while he does it. He turns to me and he says: "Why so serious?". He comes at me with the knife "Why so serious?". He sticks the blade in my mouth. "Let's put a smile on that face." and... Why so serious?</p>
+									<blockquote class="hidden-xs">I'll be standing where l belong. Between you and the peopIe of Gotham. The city needs Bruce Wayne, your resources, your knowledge. It doesn't need your body or your life. That time is past.</blockquote>
+									<ul>
+										<li>That's a lovely lovely voice!</li>
+										<li>You see, I'm a guy of simple taste. I enjoy dynamite and gunpowder and gasoline.</li>
+										<li>You have learn to bury your guilt with anger. I will teach you to confront it and to face the truth</li>
+										<li>And as for the television's so-called plan, Batman has no jurisdiction.</li>
+									</ul>
+						  			<a href="#" class="my__button">Get Started</a>
+					  			</div>
+					  		</div>
 					  	</div>
-					</div>		
+					</div>	
 				</div>
 			</div>
 		</div>
@@ -220,32 +222,83 @@
 		<div class="row">
 			<div class="col-xs-12 col-md-12">
 				<h2 class="title__section">Pricing</h2>
-				<p>The ideal features to meet the need you have, with a clean and simple interface, you can enjoy many features with the free version or pay the premium version</p>
+				<p class="subtitle__section">The ideal features to meet the need you have, with a clean and simple interface, you can enjoy many features with the free version or pay the premium version</p>
 			</div>
-			<div class="col-xs-12 col-md-6">
-				<div class="princing--left">
+			<div class="col-xs-12 col-md-5">
+				<!-- Pricing Left -->
+				<div class="pricing--left">
 					<div class="row">
-						<div class="col-md-12">
-							<p><b>Free:</b> our free mode allows you access to the basic functions, so you have a real experience of our app. Behaviors may be limited by the characteristics of the plan</p>
-						</div>
-						<div class="col-md-12">
-							<p>Premium: Es la manera ideal de usar nuestra aplicación teniendo acceso a los diferentes modulos que completan la experiencia de uso, es la manera recomendada de usar nuestra aplicación sin importar la plataforma</p>
-						</div>
-					</div>					
-				</div>
+						<div class="col-md-12 hidden-xs">
+							<div class="pricing--left__item">
+								<div class="row">
+									<div class="col-md-2 col-xs-12">
+										<figure>
+											<img src="img/free.png" alt="free">
+										</figure>						
+									</div>
+									<div class="col-md-9 col-xs-12">
+										<h3>Free Versión</h3>
+									</div>
+									<div class="col-md-12 col-xs-12">
+										<p>Every man who has lotted here over the centuries, has looked up to the light and imagined climbing to freedom. So easy, so simple! And like shipwrecked men turning to seawater foregoing uncontrollable thirst, many have died trying. And then here there can be no true despair without hope.</p>
+									</div>
+								</div>
+							</div>
+							<div class="pricing--left__item">
+								<div class="row">
+									<div class="col-md-2 col-xs-12">
+										<figure>
+											<img src="img/teamwork.png" alt="free">
+										</figure>						
+									</div>
+									<div class="col-md-9 col-xs-12">
+										<h3>Premium</h3>
+									</div>
+									<div class="col-md-12 col-xs-12">
+										<p>Seven hundred twelve counts of extortion. Eight hundred and forty-nine counts of racketeering. Two hundred and forty-six counts of fraud. Eighty-seven counts of conspiracy murder.Five hundred and twenty-seven counts of obstruction of justice.</p>
+									</div>
+								</div>
+							</div>
+							<!-- Call Us -->
+							<div class="callus hidden-xs">
+								<div class="row">
+									<div class="col-md-12">
+										<h4><span>Call Us:</span> 1-8000-555-555</h4>
+										<p>or send email to <a href="#">info@appmore.com</a></p>
+									</div>
+								</div>
+							</div>
+						</div>													
+					</div>
+				</div>			
 			</div>
-			<div class="col-xs-12 col-md-6">
+			<div class="col-xs-12 col-md-7">
+				<!-- Pricing Right -->
 				<div class="pricing--right">
-					<div class="col-xs-10 col-xs-offset-1 col-md-5">
+					<div class="col-xs-12 col-md-6">
 						<div class="pricing__table">
 							<h2>Free</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero a odit provident recusandae. Necessitatibus dolor officia, incidunt et sapiente, reprehenderit fugiat vitae voluptate, porro quidem eaque quasi ad eum mollitia.</p>
+							<h3><sub>$</sub>0</h3>
+							<ul>
+								<li><span>&#10003;</span>100 MB Disk Space</li>
+								<li><span>&#10003;</span>1 Subdomain</li>
+								<li><span>&#10003;</span>2 Email Accounts</li>
+								<li><span>&#10003;</span>2 GB Bandwidth</li>
+							</ul>
+							<a href="#" class="my__button">Get Started</a>
 						</div>
 					</div>
-					<div class="col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-1">
+					<div class="col-xs-12 col-md-6 ">
 						<div class="pricing__table">
-							<h2>Free</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero a odit provident recusandae. Necessitatibus dolor officia, incidunt et sapiente, reprehenderit fugiat vitae voluptate, porro quidem eaque quasi ad eum mollitia.</p>
+							<h2>Premium</h2>
+							<h3><sub>$</sub>99</h3>
+							<ul>
+								<li><span>&#10003;</span>4 GB Disk Space</li>
+								<li><span>&#10003;</span>5 Subdomain</li>
+								<li><span>&#10003;</span>10 Email Accounts</li>
+								<li><span>&#10003;</span>20 GB Bandwidth</li>
+							</ul>
+							<a href="#" class="my__button">Get Started</a>
 						</div>
 					</div>
 				</div>
