--- a/index.html
+++ b/index.html
@@ -314,49 +314,106 @@
 		<div class="row">
 			<div class="col-xs-12 col-md-12">
 				<h2 class="title__section">Team</h2>
-				<p>The ideal features to meet the need you have, with a clean and simple interface, you can enjoy many features with the free version or pay the premium version</p>
+				<p class="subtitle__section">The ideal features to meet the need you have, with a clean and simple interface, you can enjoy many features with the free version or pay the premium version</p>
 			</div>
 			<div class="col-xs-12 col-md-6">
+				<!-- Team member left -->
 				<div class="team--left">
 					<div class="row">
-						<div class="col-xs-6 col-md-6">
+						<div class="col-xs-6 col-xs-offset-0 col-md-6 col-md-offset-0">
+							<div class="team__member" data-member="1">
+								<figure>
+									<img src="img/members/member1.png" alt="member">
+									<figcaption>
+										<h3>Jose Mendez</h3>
+										<h4>CEO</h4>
+									</figcaption>
+								</figure>
+							</div>							
+						</div>	
+						<div class="col-xs-6 col-xs-offset-0 col-md-6 col-md-offset-0">
+							<div class="team__member" data-member="2">
+								<figure>
+									<img src="img/members/member2.png" alt="member">
+									<figcaption>
+										<h3>Maria Toth</h3>
+										<h4>Marketing Digital</h4>
+									</figcaption>
+								</figure>
+							</div>							
+						</div>	
+						<div class="col-xs-12 col-md-6">
 							<div class="team__member">
-								<img src="https://imgholder.ru/600x300/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt="">
+								<figure>
+									<img src="img/members/member3.png" alt="member">
+									<figcaption>
+										<h3>Michael Townsey</h3>
+										<h4>Backend Senior</h4>
+									</figcaption>
+								</figure>
 							</div>							
 						</div>	
 						<div class="col-xs-6 col-md-6">
 							<div class="team__member">
-								<img src="https://imgholder.ru/600x300/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt="">
+								<figure>
+									<img src="img/members/member4.png" alt="member">
+									<figcaption>
+										<h3>Trevor Philips</h3>
+										<h4>Backend Senior</h4>
+									</figcaption>
+								</figure>
 							</div>							
 						</div>	
 						<div class="col-xs-6 col-md-6">
 							<div class="team__member">
-								<img src="https://imgholder.ru/600x300/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt="">
+								<figure>
+									<img src="img/members/member6.png" alt="member">
+									<figcaption>
+										<h3>Lisa Mons</h3>
+										<h4>Ui/Ux</h4>
+									</figcaption>
+								</figure>
 							</div>							
 						</div>	
 						<div class="col-xs-6 col-md-6">
 							<div class="team__member">
-								<img src="https://imgholder.ru/600x300/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt="">
-							</div>							
-						</div>	
-						<div class="col-xs-6 col-md-6">
-							<div class="team__member">
-								<img src="https://imgholder.ru/600x300/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt="">
-							</div>							
-						</div>	
-						<div class="col-xs-6 col-md-6">
-							<div class="team__member">
-								<img src="https://imgholder.ru/600x300/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt="">
+								<figure>
+									<img src="img/members/member5.png" alt="member">
+									<figcaption>
+										<h3>Tony Stark</h3>
+										<h4>Fronted-Developer</h4>
+									</figcaption>
+								</figure>
 							</div>							
 						</div>						
 					</div>
 				</div>
 			</div>
+			<!-- Team Member Right -->
 			<div class="hidden-xs col-md-6">
-				<div class="team__member--active">
+				<div class="team__member__right team__member--active">
 					<div class="row">
-						<div class="col-md-6 col-md-offset-3">
-							<img src="https://imgholder.ru/600x600/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt="">
+						<div class="col-md-12">
+							<div class="team__member--active__picture">								
+							</div>
+						</div>
+						<div class="col-md-12">
+							<h3>Jose Mendez</h3>
+							<a href="#">Josem@gmail.com</a>
+							<p>With experience of 4 years in web layout, user experience and image processing for web. With a focus on design is the ideal element to work with us.</p>
+							<ul>
+								<li><a href="#"><img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt=""></a></li>
+								<li><a href="#"><img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt=""></a></li>
+								<li><a href="#"><img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt=""></a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="team__member__right">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="team__member--active__picture">								
+							</div>
 						</div>
 						<div class="col-md-12">
 							<h3>Jose Mendez</h3>
