cambio de member team

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 			</div>
 			<!-- Team Member Right -->
 			<div class="hidden-xs col-md-6">
-				<div class="team__member__right team__member--active">
+				<div class="team__member__right" data-member-right="1">
 					<div class="row">
 						<div class="col-md-12">
 							<div class="team__member--active__picture">								
