--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 				    <!-- Collect the nav links, forms, and other content for toggling -->
 				    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				      <ul class="nav navbar-nav">
-				        <li class="active"><a href="#">Features <span class="sr-only">(current)</span></a></li>
-				        <li><a href="#">Pricing</a></li>
-				        <li><a href="#">Team</a></li>
+				        <li class="active"><a href="#features">Features <span class="sr-only">(current)</span></a></li>
+				        <li><a href="#pricing">Pricing</a></li>
+				        <li><a href="#team">Team</a></li>
 				        <li class="support"><a href="#">Support</a></li>
-				        <li class="download"><a href="#">Download</a></li>			        
+				        <li class="download"><a href="#cta">Download</a></li>			        
 				      </ul>				      
 				    </div><!-- /.navbar-collapse -->
 				  </div><!-- /.container-fluid -->
@@ -103,7 +103,7 @@
 <!-- /About -->
 
 <!-- Features -->
-<section class="features espaciado boxy">
+<section class="features espaciado boxy" id="features">
 
 	<div class="container">
 		<div class="row">
@@ -217,7 +217,7 @@
 <!-- /Features -->
 
 <!-- Pricing -->
-<section class="pricing espaciado boxy--left">
+<section class="pricing espaciado boxy--left" id="pricing">
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-md-12">
@@ -309,7 +309,7 @@
 <!-- /Pricing -->
 
 <!-- Team -->
-<section class="team espaciado">
+<section class="team espaciado" id="team">
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-md-12">
@@ -342,7 +342,7 @@
 								</figure>
 							</div>							
 						</div>	
-						<div class="col-xs-12 col-md-6">
+						<div class="col-xs-6 col-xs-offset-0 col-md-6 col-md-offset-0">
 							<div class="team__member" data-member="3">
 								<figure>
 									<img src="img/members/member3.png" alt="member">
@@ -353,7 +353,7 @@
 								</figure>
 							</div>							
 						</div>	
-						<div class="col-xs-6 col-md-6">
+						<div class="col-xs-6 col-xs-offset-0 col-md-6 col-md-offset-0">
 							<div class="team__member" data-member="4">
 								<figure>
 									<img src="img/members/member4.png" alt="member">
@@ -364,7 +364,7 @@
 								</figure>
 							</div>							
 						</div>	
-						<div class="col-xs-6 col-md-6">
+						<div class="col-xs-6 col-xs-offset-0 col-md-6 col-md-offset-0">
 							<div class="team__member" data-member="5">
 								<figure>
 									<img src="img/members/member6.png" alt="member">
@@ -375,7 +375,7 @@
 								</figure>
 							</div>							
 						</div>	
-						<div class="col-xs-6 col-md-6">
+						<div class="col-xs-6 col-xs-offset-0 col-md-6 col-md-offset-0">
 							<div class="team__member" data-member="6">
 								<figure>
 									<img src="img/members/member5.png" alt="member">
@@ -406,11 +406,11 @@
 							</div>
 						</div>
 						<div class="col-md-12">
-							<p>With experience of 4 years in web layout, user experience and image processing for web. With a focus on design is the ideal element to work with us.</p>
+							<p>No, no, no. A vigilante is just a man lost in scramble for his own gratification. He can be destroyed or locked up. But if you make yourself more than just a man, if you devote yourself to an idel and if they can't stop you then.</p>
 							<ul>
-								<li><a href="#"><img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt=""></a></li>
-								<li><a href="#"><img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt=""></a></li>
-								<li><a href="#"><img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt=""></a></li>
+								<li><a href="#"><img src="img/icons/facebook.png" alt="social"></a></li>
+								<li><a href="#"><img src="img/icons/instagram.png" alt="social"></a></li>
+								<li><a href="#"><img src="img/icons/twitter.png" alt="social"></a></li>
 							</ul>
 						</div>
 					</div>
@@ -430,11 +430,11 @@
 							</div>
 						</div>
 						<div class="col-md-12">
-							<p>With experience of 4 years in web layout, user experience and image processing for web. With a focus on design is the ideal element to work with us.</p>
+							<p>But I know the rage that drives you. That impossible anger strangIing the grief until the memory of your loved one is just poison in your veins. And one day, you catch yourself wishing the person you loved had never.</p>
 							<ul>
-								<li><a href="#"><img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt=""></a></li>
-								<li><a href="#"><img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt=""></a></li>
-								<li><a href="#"><img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt=""></a></li>
+								<li><a href="#"><img src="img/icons/facebook.png" alt="social"></a></li>
+								<li><a href="#"><img src="img/icons/instagram.png" alt="social"></a></li>
+								<li><a href="#"><img src="img/icons/twitter.png" alt="social"></a></li>
 							</ul>
 						</div>
 					</div>
@@ -445,20 +445,20 @@
 						<div class="col-md-12">
 							<div class="team__member--active__picture">	
 								<figure>
-									<img src="img/members/member2full.png" alt="member">
+									<img src="img/members/member3full.png" alt="member">
 									<figcaption>
-										<h3>Michael</h3>
+										<h3>Michael Townsey</h3>
 										<a href="#">mariiita@gmail.com</a>
 									</figcaption>
 								</figure>									
 							</div>
 						</div>
 						<div class="col-md-12">
-							<p>With experience of 4 years in web layout, user experience and image processing for web. With a focus on design is the ideal element to work with us.</p>
+							<p>Seven hundred twelve counts of extortion. Eight hundred and forty-nine counts of racketeering. Two hundred and forty-six counts of fraud. Eighty-seven counts of conspiracy murder.Five hundred and twenty-seven.</p>
 							<ul>
-								<li><a href="#"><img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt=""></a></li>
-								<li><a href="#"><img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt=""></a></li>
-								<li><a href="#"><img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt=""></a></li>
+								<li><a href="#"><img src="img/icons/facebook.png" alt="social"></a></li>
+								<li><a href="#"><img src="img/icons/instagram.png" alt="social"></a></li>
+								<li><a href="#"><img src="img/icons/twitter.png" alt="social"></a></li>
 							</ul>
 						</div>
 					</div>
@@ -469,20 +469,20 @@
 						<div class="col-md-12">
 							<div class="team__member--active__picture">	
 								<figure>
-									<img src="img/members/member2full.png" alt="member">
+									<img src="img/members/member4full.png" alt="member">
 									<figcaption>
-										<h3>Trevor Toth</h3>
+										<h3>Trevor Phillips</h3>
 										<a href="#">mariiita@gmail.com</a>
 									</figcaption>
 								</figure>									
 							</div>
 						</div>
 						<div class="col-md-12">
-							<p>With experience of 4 years in web layout, user experience and image processing for web. With a focus on design is the ideal element to work with us.</p>
+							<p>Now, our operation is small but there is a lot of potential for aggressive expansion. So which of you fine gentlemen would like to join our team? Oh. There's only one spot open right now, so we're gonna have... tryouts.</p>
 							<ul>
-								<li><a href="#"><img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt=""></a></li>
-								<li><a href="#"><img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt=""></a></li>
-								<li><a href="#"><img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt=""></a></li>
+								<li><a href="#"><img src="img/icons/facebook.png" alt="social"></a></li>
+								<li><a href="#"><img src="img/icons/instagram.png" alt="social"></a></li>
+								<li><a href="#"><img src="img/icons/twitter.png" alt="social"></a></li>
 							</ul>
 						</div>
 					</div>
@@ -493,20 +493,20 @@
 						<div class="col-md-12">
 							<div class="team__member--active__picture">	
 								<figure>
-									<img src="img/members/member2full.png" alt="member">
+									<img src="img/members/member5full.png" alt="member">
 									<figcaption>
-										<h3>Lisa Toth</h3>
+										<h3>Lisa Mons</h3>
 										<a href="#">mariiita@gmail.com</a>
 									</figcaption>
 								</figure>									
 							</div>
 						</div>
 						<div class="col-md-12">
-							<p>With experience of 4 years in web layout, user experience and image processing for web. With a focus on design is the ideal element to work with us.</p>
+							<p>We have purged your fear. You are ready to Iead these men. You are ready to become a member of the League of Shadows. But first, you must demonstrate your commitment to justice.</p>
 							<ul>
-								<li><a href="#"><img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt=""></a></li>
-								<li><a href="#"><img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt=""></a></li>
-								<li><a href="#"><img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt=""></a></li>
+								<li><a href="#"><img src="img/icons/facebook.png" alt="social"></a></li>
+								<li><a href="#"><img src="img/icons/instagram.png" alt="social"></a></li>
+								<li><a href="#"><img src="img/icons/twitter.png" alt="social"></a></li>
 							</ul>
 						</div>
 					</div>
@@ -517,20 +517,20 @@
 						<div class="col-md-12">
 							<div class="team__member--active__picture">	
 								<figure>
-									<img src="img/members/member2full.png" alt="member">
+									<img src="img/members/member6full.png" alt="member">
 									<figcaption>
-										<h3>Tony Toth</h3>
+										<h3>Tony Stark</h3>
 										<a href="#">mariiita@gmail.com</a>
 									</figcaption>
 								</figure>									
 							</div>
 						</div>
 						<div class="col-md-12">
-							<p>With experience of 4 years in web layout, user experience and image processing for web. With a focus on design is the ideal element to work with us.</p>
+							<p>When a forest grows too wild, a purging fire is inevitable and natural. Tomorrow the world will watch in horror as its greatest city destroys itself. The movement back to harmony will be unstoppable this time.</p>
 							<ul>
-								<li><a href="#"><img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt=""></a></li>
-								<li><a href="#"><img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt=""></a></li>
-								<li><a href="#"><img src="https://imgholder.ru/50x50/2196F3/ECEFF1.jpg&text=imgHolder&font=bebas&fz=36" alt=""></a></li>
+								<li><a href="#"><img src="img/icons/facebook.png" alt="social"></a></li>
+								<li><a href="#"><img src="img/icons/instagram.png" alt="social"></a></li>
+								<li><a href="#"><img src="img/icons/twitter.png" alt="social"></a></li>
 							</ul>
 						</div>
 					</div>
@@ -542,7 +542,7 @@
 <!-- /Team -->
 
 <!-- Cta -->
-<section class="cta espaciado">
+<section class="cta espaciado" id="cta">
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-md-12">
