solucion problema jquery

--- a/index.html
+++ b/index.html
@@ -570,10 +570,7 @@
 <!-- /Footer -->
 
 <!-- ======================= Scripts  =========================== -->
-<script
-  src="http://code.jquery.com/jquery-3.2.1.js"
-  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
-  crossorigin="anonymous"></script>
+<script src="js/jquery.js"></script>
 <!-- ======================= Bootstrap  =========================== -->
 <script src="js/bootstrap.js"></script>
 <!-- ======================= JQuery  =========================== -->
