Inicio de nuevas secciones

--- a/index.html
+++ b/index.html
@@ -104,7 +104,6 @@
 
 <!-- Features -->
 <section class="features espaciado boxy" id="features">
-
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-md-12">
@@ -137,7 +136,7 @@
 					  			</figure>
 					  		</div>
 					  		<div class="col-md-7 col-xs-12">					  			
-					  				<h2>Clean & Modern Design</h2>
+					  				<h2 class="color__p">Clean & Modern Design</h2>
 						  			<p>Maybe someday, when Gotham no longer needs Batman I'll see him again. As Gotham's favored son you will be ideally
 						  			placed to strike at the heart of criminality. If you're good at something, never do it for free.							
 									What if, before she died, she wrote a letter saying she chose Harvey Dent over you? And what if, to spare you pain, I burnt that letter? 
@@ -160,7 +159,7 @@
 					  			</figure>
 					  		</div>
 					  		<div class="col-md-7 col-xs-12">					  			
-					  			<h2>Easily Customize</h2>
+					  			<h2 class="color__p">Easily Customize</h2>
 							  		<p>But I know the rage that drives you. That impossible anger strangIing the grief until the memory of your loved one is just poison in your veins. And one day, you catch yourself wishing the person you loved had never existed so you'd be spared your pain.</p>
 							  		<p>Maybe someday, when Gotham no longer needs Batman I'll see him again. As Gotham's favored son you will be ideally placed to strike at the heart of criminality. If you're good at something, never do it for free. </p>
 							  		<blockquote class="hidden-xs">
@@ -179,7 +178,7 @@
 					  		</div>
 					  		<div class="col-md-7 col-xs-12">
 					  			<div class="features__slide__item--info">
-					  				<h2>Fully Responsive</h2>
+					  				<h2 class="color__p">Fully Responsive</h2>
 						  			<p>Maybe someday, when Gotham no longer needs Batman I'll see him again. Tomorrow, you will be released. If you are bored of brawling with thieves and want to achieve something there is a rare blue flower that grows on the eastern slopes. Pick one of these flowers. If you can carry it to the top of the mountain, you may find what you were looking for in the first place.</p>
 						  			<p class="hidden-xs">You have inspired good. But you spat in the faces of Gotham's criminals. Didn't you think there might be casualties? Things always get worse before they get better. Hero can be anyone. Even a man knowing something as simple and reassuring as putting a coat around a young boy shoulders to let him know the world hadn't ended.</p>
 						  			<p>We have purged your fear. You are ready to Iead these men. You are ready to become a member of the League of Shadows. But first, you must demonstrate your commitment to justice. I'm Gotham's reckoning. It'll end the ball of damns you've all been living on. A necessary evil. Okay. Now... Hardened Kevlar plates over titanium-dipped, tri-weave fibers for flexibility. You'll be lighter, faster, more agile. Never underestimate Gotham City. People get mugged coming home from work every day of the week. Sometimes things just go bad.</p>						  			
@@ -195,7 +194,7 @@
 					  		</div>
 					  		<div class="col-md-7 col-xs-12">
 					  			<div class="features__slide__item--info">
-					  				<h2>Powerful Options</h2>
+					  				<h2 class="color__p">Powerful Options</h2>
 						  			<p>You wanna know how I got these scars? My father was... a drinker, and a fiend. And one night, he goes off crazier than usual. Mommy gets the kitchen knife to defend herself. He doesn't like that, not one bit. So, me watching he takes the knife to her, laughing while he does it. He turns to me and he says: "Why so serious?". He comes at me with the knife "Why so serious?". He sticks the blade in my mouth. "Let's put a smile on that face." and... Why so serious?</p>
 									<blockquote class="hidden-xs">I'll be standing where l belong. Between you and the peopIe of Gotham. The city needs Bruce Wayne, your resources, your knowledge. It doesn't need your body or your life. That time is past.</blockquote>
 									<ul>
@@ -263,8 +262,8 @@
 							<div class="callus hidden-xs">
 								<div class="row">
 									<div class="col-md-12">
-										<h4><span>Call Us:</span> 1-8000-555-555</h4>
-										<p>or send email to <a href="#">info@appmore.com</a></p>
+										<h4><span class="color__p">Call Us:</span> 1-8000-555-555</h4>
+										<p>or send email to <a href="#" class="color__p">info@appmore.com</a></p>
 									</div>
 								</div>
 							</div>
@@ -277,8 +276,8 @@
 				<div class="pricing--right">
 					<div class="col-xs-12 col-md-6">
 						<div class="pricing__table">
-							<h2>Free</h2>
-							<h3><sub>$</sub>0</h3>
+							<h2 class="color__p">Free</h2>
+							<h3 class="color__p"><sub>$</sub>0</h3>
 							<ul>
 								<li><span>&#10003;</span>100 MB Disk Space</li>
 								<li><span>&#10003;</span>1 Subdomain</li>
@@ -322,66 +321,66 @@
 					<div class="row">
 						<div class="col-xs-6 col-xs-offset-0 col-md-6 col-md-offset-0">
 							<div class="team__member" data-member="1">
-								<figure>
+								<figure class="bgcolor__p">
 									<img src="img/members/member1.png" alt="member">
 									<figcaption>
 										<h3>Jose Mendez</h3>
-										<h4>CEO</h4>
+										<h4 class="bgcolor__p">CEO</h4>
 									</figcaption>
 								</figure>
 							</div>							
 						</div>	
 						<div class="col-xs-6 col-xs-offset-0 col-md-6 col-md-offset-0">
 							<div class="team__member" data-member="2">
-								<figure>
+								<figure class="bgcolor__p">
 									<img src="img/members/member2.png" alt="member">
 									<figcaption>
 										<h3>Maria Toth</h3>
-										<h4>Marketing Digital</h4>
+										<h4 class="bgcolor__p">Marketing Digital</h4>
 									</figcaption>
 								</figure>
 							</div>							
 						</div>	
 						<div class="col-xs-6 col-xs-offset-0 col-md-6 col-md-offset-0">
 							<div class="team__member" data-member="3">
-								<figure>
+								<figure class="bgcolor__p">
 									<img src="img/members/member3.png" alt="member">
 									<figcaption>
 										<h3>Michael Townsey</h3>
-										<h4>Backend Senior</h4>
+										<h4 class="bgcolor__p">Backend Senior</h4>
 									</figcaption>
 								</figure>
 							</div>							
 						</div>	
 						<div class="col-xs-6 col-xs-offset-0 col-md-6 col-md-offset-0">
 							<div class="team__member" data-member="4">
-								<figure>
+								<figure class="bgcolor__p">
 									<img src="img/members/member4.png" alt="member">
 									<figcaption>
 										<h3>Trevor Philips</h3>
-										<h4>Backend Senior</h4>
+										<h4 class="bgcolor__p">Backend Senior</h4>
 									</figcaption>
 								</figure>
 							</div>							
 						</div>	
 						<div class="col-xs-6 col-xs-offset-0 col-md-6 col-md-offset-0">
 							<div class="team__member" data-member="5">
-								<figure>
+								<figure class="bgcolor__p">
 									<img src="img/members/member6.png" alt="member">
 									<figcaption>
 										<h3>Lisa Mons</h3>
-										<h4>Ui/Ux</h4>
+										<h4 class="bgcolor__p">Ui/Ux</h4>
 									</figcaption>
 								</figure>
 							</div>							
 						</div>	
 						<div class="col-xs-6 col-xs-offset-0 col-md-6 col-md-offset-0">
 							<div class="team__member" data-member="6">
-								<figure>
+								<figure class="bgcolor__p">
 									<img src="img/members/member5.png" alt="member">
 									<figcaption>
 										<h3>Tony Stark</h3>
-										<h4>Fronted-Developer</h4>
+										<h4 class="bgcolor__p">Fronted-Developer</h4>
 									</figcaption>
 								</figure>
 							</div>							
@@ -541,15 +540,70 @@
 </section>
 <!-- /Team -->
 
+<!-- Separator -->
+<section class="separator">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6">
+				<div class="separator--left">
+					<h4>Download the app now</h4>
+					<h3>The ideal features to meet the need you have.</h3>
+					<p>In the all Operative System, <span>Ios / Android</span></p>
+					<a href="#" class="my__button my__button--white">Download</a>
+				</div>
+			</div>			
+		</div>
+	</div>
+</section>
+<!-- /Separator -->
+
+<!-- Faq -->
+<div class="section faq espaciado">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-8">
+				<div class="faq--left">
+					<h3>Are you so desperate to fight?</h3>
+					<p>My name is Merely Ducard but I speak for Ra's al Ghul... a man greatly feared by the criminal underworld. A mon who can offer you a path. Someone like you is only here by choice. You have been exploring the criminal fraternity but whatever your original intentions you have to become truly lost. The path of a man who shares his hatred of evil and wishes to serve true justice. The path of the League of Shadows.</p>
+
+					<h3>Do you want my opinion?</h3>
+					<p>Now, our operation is small but there is a lot of potential for aggressive expansion. So which of you fine gentlemen would like to join our team? Oh. There's only one spot open right now, so we're gonna have... tryouts.</p>
+
+					<h3>Just you, sir?</h3>
+					<p>Don't worry, Master Wayne. It takes a little time to get back in the swing of things.</p>
+
+					<h3>Are you so desperate to fight?</h3>
+					<p>My name is Merely Ducard but I speak for Ra's al Ghul... a man greatly feared by the criminal underworld. A mon who can offer you a path. Someone like you is only here by choice. You have been exploring the criminal fraternity but whatever your original intentions you have to become truly lost. The path of a man who shares his hatred of evil and wishes to serve true justice. The path of the League of Shadows.</p>
+
+					<h3>Do you want my opinion?</h3>
+					<p>Now, our operation is small but there is a lot of potential for aggressive expansion. So which of you fine gentlemen would like to join our team? Oh. There's only one spot open right now, so we're gonna have... tryouts.</p>
+
+					<h3>Just you, sir?</h3>
+					<p>Don't worry, Master Wayne. It takes a little time to get back in the swing of things.</p>
+
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="faq--right">
+					<h4>Questions?</h4>
+					<h3 class="color__p">All Answers</h3>
+					<p>Every man who has lotted here over the centuries, has looked up to the light and imagined climbing to freedom. So easy, so simple! And like shipwrecked men turning to seawater foregoing uncontrollable thirst, many have died trying. And then here there can be no true despair without hope.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- /Faq -->
+
 <!-- Cta -->
-<section class="cta espaciado" id="cta">
+<section class="cta espaciado bgcolor__p" id="cta">
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-md-12">
-				<div class=" col-xs-12 col-md-12">
+				<div class="col-xs-12 col-md-12">
 					<h2>Let's work together!</h2>
 					<p>Download the app and create a account</p>
-					<a href="#" class="my__button">Download</a>
+					<a href="#" class="my__button my__button--white">Download</a>
 				</div>
 			</div>
 		</div>
